[package]
name = "Chameleon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pnet = "0.34"
rand = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
hex = "0.4"
nix = { version = "0.27", features = ["user"] }
thiserror = "1.0"
reqwest = "0.12.12"
